--- a/index.html
+++ b/index.html
@@ -20,14 +20,18 @@
     </header>
     <section id="home">
         <img src="./images/HomeImage.png" />
-        <p>Full Stack Developer</p>
-        <p>KangYuhyun</p>
-        <p>간단한 자기소개</p>
-        <button>Portfolio</button>
-        <button>Contact</button>
+        <div class="maincard">
+            <p class="hp1">Full Stack Developer</p>
+            <p class="hp2">KangYuhyun</p>
+            <p class="hp3">간단한 자기소개</p>
+            <div class="homebutton">
+                <a href="#project">Project</a>
+                <a href="#contact">Contact</a>
+            </div>
+        </div>                    
     </section>
     <section id="skills">
-        <div>Skills</div>
+        <div class="title">Skills</div>
         <svg width="219" height="219" viewBox="0 0 219 219" fill="none" xmlns="http://www.w3.org/2000/svg">
             <g id="SkillsCard">
                 <circle id="Ellipse 3" cx="109.5" cy="109.5" r="109" fill="#333333" stroke="#007CED" />
@@ -44,7 +48,7 @@
 
     </section>
     <footer>
-        <span class="footertxt1">Github</span>
+        <a href="https://github.com/Dnadit" class="footertxt1">Github</a>
         <span class="copyright">&copy; KangYH</span>
     </footer>
 </body>
